--- a/task28-1/task28-1.csproj
+++ b/task28-1/task28-1.csproj
@@ -68,6 +68,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="addbook.aspx" />
+    <Content Include="edit.aspx" />
     <Content Include="files\books.txt" />
     <Content Include="files\meetingroom.txt" />
     <Content Include="files\register.txt" />
@@ -76,6 +77,7 @@
     <Content Include="Loginpage.aspx" />
     <Content Include="Meeting Rooms.aspx" />
     <Content Include="powersStudents.aspx" />
+    <Content Include="profilePage.aspx" />
     <Content Include="regesterationPage.aspx" />
     <Content Include="See All Book.aspx" />
     <Content Include="Web.config" />
@@ -87,6 +89,13 @@
     </Compile>
     <Compile Include="addbook.aspx.designer.cs">
       <DependentUpon>addbook.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="edit.aspx.cs">
+      <DependentUpon>edit.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="edit.aspx.designer.cs">
+      <DependentUpon>edit.aspx</DependentUpon>
     </Compile>
     <Compile Include="homepage.aspx.cs">
       <DependentUpon>homepage.aspx</DependentUpon>
@@ -122,6 +131,13 @@
     </Compile>
     <Compile Include="powersStudents.aspx.designer.cs">
       <DependentUpon>powersStudents.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="profilePage.aspx.cs">
+      <DependentUpon>profilePage.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="profilePage.aspx.designer.cs">
+      <DependentUpon>profilePage.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="regesterationPage.aspx.cs">
